--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.1",
+    "graphql-tools": "^4.0.5",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {
