--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/confidenti-al/graphql-exercise#readme",
   "dependencies": {
+    "casual": "^1.6.2",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.1",
     "graphql-tools": "^4.0.5",
-    "nodemon": "^1.19.1"
+    "lodash": "^4.17.15",
+    "nodemon": "^1.19.1",
+    "sequelize": "^5.16.0",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
