--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^14.5.1",
     "graphql-tools": "^4.0.5",
     "lodash": "^4.17.15",
+    "mongoose": "^5.6.10",
     "nodemon": "^1.19.1",
     "sequelize": "^5.16.0",
     "sqlite3": "^4.1.0"
